# gltest

./: CMakeLists.txt
src/: CMakeLists.txt  glplayer.cpp  glplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
